# macos-agent

./: .gitignore  ARCHITECTURE.md  MIGRATION_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  action_log_20251023_170556.json  action_log_20251023_172348.json  action_log_20251023_173211.json  action_log_20251023_173851.json  action_log_20251023_174553.json  action_log_20251023_180635.json  action_log_20251023_181304.json  action_log_20251023_183712.json  pyproject.toml  run.sh  setup.sh  test_keyboard.py  test_screenshot.py  test_screenshot_debug.py
computer_use_demo/: action_recorder.py  build_index.py  loop.py  streamlit.py  test_query.py  vector_db.py
computer_use_demo/tools/: __init__.py  computer_macos.py  edit.py  groups.py
recordings/: action_log_20251023_173851.json  action_log_20251023_174553.json  action_log_20251023_180635.json  action_log_20251023_181304.json  action_log_20251023_183712.json  actions.ann  index_metadata.json
